--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".SetPasswordActivity" />
         <activity android:name=".SelectDevice" />
         <activity android:name=".DownloadActivity"/>
+        <service android:name="task.TaskService" />
 
 
         <activity
